--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -11,7 +11,7 @@
         app:showAsAction="always" />
     <item
         android:id="@+id/actionNutritionSettings"
-        android:icon="@drawable/ic_settings"
+        android:icon="@drawable/ic_profile"
         android:orderInCategory="101"
         android:title="@string/actionNutritionSettings"
         app:showAsAction="always" />
