--- a/app/src/main/res/menu/menu_save_settings.xml
+++ b/app/src/main/res/menu/menu_save_settings.xml
@@ -5,7 +5,7 @@
 
     <item
         android:id="@+id/menu_save_floppy"
-        android:icon="@mipmap/ic_save_floppy"
+        android:icon="@drawable/ic_save_floppy"
         android:title="@string/lblSave"
         app:showAsAction="always" />
 
