--- a/app/src/main/res/layout/activity_fat_secret_search.xml
+++ b/app/src/main/res/layout/activity_fat_secret_search.xml
@@ -73,12 +73,13 @@
 
     </LinearLayout>
 
-        <com.github.clans.fab.FloatingActionMenu
+    <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/fabCreateNew"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:elevation="0dp"
         fab:menu_animationDelayPerItem="50"
         fab:menu_backgroundColor="#c8fcfcfc"
         fab:menu_buttonSpacing="0dp"
@@ -92,8 +93,7 @@
         fab:menu_labels_style="@style/menu_labels_style"
         fab:menu_openDirection="up"
         fab:menu_shadowColor="#66000000"
-        fab:menu_shadowRadius="2dp"
-        fab:menu_shadowXOffset="1dp"
+        fab:menu_shadowRadius="1dp"
         fab:menu_shadowYOffset="1dp"
         fab:menu_showShadow="true">
 
@@ -103,10 +103,10 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_food"
             fab:fab_colorNormal="@color/Transparent"
+            fab:fab_colorPressed="@color/colorPrimaryLight"
             fab:fab_label="@string/lblNewFood"
             fab:fab_showShadow="false"
-            fab:fab_size="normal"
-            fab:fab_colorPressed="@color/colorPrimaryLight" />
+            fab:fab_size="normal" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fabCreateNewMeal"
@@ -114,10 +114,10 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_meal"
             fab:fab_colorNormal="@color/Transparent"
+            fab:fab_colorPressed="@color/colorPrimaryLight"
             fab:fab_label="@string/lblNewMeal"
             fab:fab_showShadow="false"
-            fab:fab_size="normal"
-            fab:fab_colorPressed="@color/colorPrimaryLight" />
+            fab:fab_size="normal" />
 
     </com.github.clans.fab.FloatingActionMenu>
 
