--- a/app/src/main/res/layout/activity_create_food.xml
+++ b/app/src/main/res/layout/activity_create_food.xml
@@ -83,6 +83,7 @@
                 android:id="@+id/lblCalcCalories"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
                 android:text="@string/lblCalcCalories"
                 android:textColor="@color/colorPrimary" />
 
