--- a/app/src/main/res/layout/activity_edit_food.xml
+++ b/app/src/main/res/layout/activity_edit_food.xml
@@ -79,6 +79,14 @@
                 android:hint="@string/hintCalories"
                 android:maxLength="5" />
 
+            <TextView
+                android:id="@+id/lblCalcCalories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:text="@string/lblCalcCalories"
+                android:textColor="@color/colorPrimary" />
+
         </LinearLayout>
 
         <LinearLayout
