--- a/app/src/main/res/layout/activity_select_meal_ingredients.xml
+++ b/app/src/main/res/layout/activity_select_meal_ingredients.xml
@@ -33,7 +33,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/lblSelectedFoods"
+                        android:id="@+id/lblSelectedIngredients"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/lblSelectedFoods"
